# Interview-Assistant

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  main.cpp
cmake/: dependencies.cmake
core/: CMakeLists.txt  action.h  common.h  config_manager.cpp  config_manager.h  hotkey_manager.cpp  hotkey_manager.h  hotkey_manager_p.h  launcher.cpp  launcher.h  launcher_p.h  screenshot_helper.cpp  screenshot_helper.h  test_data.h  version.h  version.h.in
core/config/: app_config.cpp  app_config.h  app_config_fwd.h  inja_renderer.cpp  inja_renderer.h  service_config.cpp  service_config.h  service_config_fwd.h  service_config_loader.cpp  service_config_loader.h  service_config_p.h  yaml_parser.cpp  yaml_parser.h  yaml_parser_p.h
core/highlighters/: markdown_highlighter.h
core/log/: log.cpp  log.h  log_component.cpp  log_component.h  log_formatter.h  logger_thread.cpp  logger_thread.h  qt_log_hook.inl
core/log/components/: colorful_console.cpp  colorful_console.h  console.cpp  console.h  qt_text_edit.cpp  qt_text_edit.h  rotating_file.cpp  rotating_file.h
core/log/formatters/: fmt.cpp  fmt.h
core/network/: api_controller.cpp  api_controller.h  api_controller_p.h  proxy_checker.cpp  proxy_checker.h
core/utils/: containers.h  files.cpp  files.h  numeric.h  platform.cpp  platform.h  style.cpp  style.h
core/widgets/: base_widget.cpp  base_widget.h  chat_message_widget.cpp  chat_message_widget.h  chat_window.cpp  chat_window.h  file_list_menu.cpp  file_list_menu.h  i_base_widget.h  interactive_label.cpp  interactive_label.h  log_panel.cpp  log_panel.h  markdown_viewer.cpp  markdown_viewer.h  overlay_menu.cpp  overlay_menu.h  overlay_widget.cpp  overlay_widget.h  request_info_menu.cpp  request_info_menu.h  screenshot_tool.cpp  screenshot_tool.h  settings.cpp  settings.h
core/widgets/private/: base_widget_impl.cpp  base_widget_impl.h  hotkey_table_widget.cpp  hotkey_table_widget.h  proxy_table_widget.cpp  proxy_table_widget.h  service_config_text_edit.cpp  service_config_text_edit.h
packaging/windows/: deploy.py.in  installer.nsi  license.txt  resource.h  resources.rc
resources/: icons.qrc  others.qrc  styles.qrc
resources/others/: service-config-default.txt
resources/styles/: markdown-viewer.style  settings.style
sandbox/: CMakeLists.txt  sandbox.cpp
